# melodia

./: .gitignore  Cargo.toml  README.md  build_linux.sh  build_windows.ps1  cross_compile_windows.sh
src/: app.rs  audio.rs  config.rs  library.rs  main.rs  metadata.rs  playlist.rs  queue.rs  theme.rs
src/ui/: album_art.rs  bottom_bar.rs  dialogs.rs  library_panel.rs  mod.rs  playlist_panel.rs  queue_panel.rs  sidebar.rs
